changed controller of customers to improve response
